Poly winding fix, several small fixes, draped poly translator basic impl
Change-Id: I3efa68ed87b1ab561b28db85a822112fc30cbe2e